# satgalaxy-cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: core.rs  glucose.rs  main.rs  minisat.rs  parser.rs
src/utils/: mod.rs  unix.rs  windows.rs
